--- a/app/views/roles/show.html.erb
+++ b/app/views/roles/show.html.erb
@@ -10,6 +10,10 @@
   <%= @role.description %>
 </p>
 
+<p>
+  <b>Assosciated users:</b>
+  <%= @assosciated_users %>
+</p>
 
 <%= link_to 'Edit', edit_role_path(@role) %> |
 <%= link_to 'Back', roles_path %>
