--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to the Store!</h1>
-<h2>Selling you useless crap since 2015</h2>
+<h1>Welcome to the Bla Bla Bla!!!</h1>
+<h2>Connecting car owners and co-travellers to share city-to-city journeys</h2>
