--- a/app/views/rides/index.html.erb
+++ b/app/views/rides/index.html.erb
@@ -1,46 +1,55 @@
-<% if @search %>
-  <h1><%= "#{@rides.count } Rides found for you"%> </h1>
-<% else %>
-  <h1>Listing Rides</h1>
-<% end %>
-<table id ='rides_lists'>
-  <tr>
-    <th>Source</th>
-    <th>Source latitude</th>
-    <th>Source longitude</th>
-    <th>Destination</th>
-    <th>Destination latitude</th>
-    <th>Destination longitude</th>
-    <th>Price</th>
-    <th>Date</th>
-    <th>Seats</th>
-    <th>Contact</th>
-    <th>Email</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-  <% @rides.each do |ride| %>
-    <tr>
-      <td><%= ride.source %></td>
-      <td><%= ride.source_latitude %></td>
-      <td><%= ride.source_longitude %></td>
-      <td><%= ride.destination %></td>
-      <td><%= ride.destination_latitude %></td>
-      <td><%= ride.destination_longitude %></td>
-      <td><%= ride.price %></td>
-      <td><%= ride.date %></td>
-      <td><%= ride.seats %></td>
-      <td><%= ride.contact %></td>
-      <td><%= ride.email %></td>
-      <td><%= link_to 'Show', ride %></td>
-      <td><%= link_to 'Edit', edit_ride_path(ride) %></td>
-      <td><%= link_to 'Destroy', ride, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+<% if @rides.present?%>
+  <% if @search %>
+    <h1><%= "#{@rides.count } Rides found for you"%> </h1>
+  <% else %>
+    <h1>Listing Rides</h1>
   <% end %>
-</table>
+  <table id ="rides_table">
+    <tr>
+      <th>Source</th>
+      <th>Source latitude</th>
+      <th>Source longitude</th>
+      <th>Destination</th>
+      <th>Destination latitude</th>
+      <th>Destination longitude</th>
+      <th>Price</th>
+      <th>Date</th>
+      <th>Seats</th>
+      <th>Onwer</th>
+      <th>Contact</th>
+      <th>Email</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
+    <% @rides.each do |ride| %>
+      <tr>
+        <td><%= ride.source %></td>
+        <td><%= ride.source_latitude %></td>
+        <td><%= ride.source_longitude %></td>
+        <td><%= ride.destination %></td>
+        <td><%= ride.destination_latitude %></td>
+        <td><%= ride.destination_longitude %></td>
+        <td><%= ride.price %></td>
+        <td><%= ride.date %></td>
+        <td><%= ride.seats %></td>
+        <td><%= ride.user.present? ? ride.user.name : 'N/A'  %></td>
+        <td><%= ride.contact %></td>
+        <td><%= ride.email %></td>
+        <td><%= link_to 'Show', ride %></td>
+        <td><%= link_to 'Edit', edit_ride_path(ride) %></td>
+        <td><%= link_to 'Destroy', ride, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </table>
+<% end %>
 <br />
-
+<h1><%= "No rides found for you" if @rides.count == 0%> </h1>
 <%= link_to 'New Ride', new_ride_path %> | <%= link_to 'Find Ride', find_rides_rides_path %>
+
+<script>
+  $( document ).ready(function() {
+    $('#rides_table').dataTable()
+  });
+</script>
