--- a/app/views/rides/find_rides.html.erb
+++ b/app/views/rides/find_rides.html.erb
@@ -1,3 +1,4 @@
+<p><h1>Find a Ride</h1></p>
 <%= form_tag find_rides_rides_path, :method => 'get' do %>
   <div class="field">
     <%= label_tag :source %><br />
