--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,7 @@
 <%# add navigation links to this file %>
 <% if user_signed_in? %>
   <li><%= link_to 'Edit account', edit_user_registration_path %></li>
+  <li><%= link_to 'Rides', rides_path %></li>
   <li><%= link_to 'Offer Ride', new_ride_path %></li>
   <li><%= link_to 'Find Ride',find_rides_rides_path %></li>
   <li><%= link_to 'Sign out', destroy_user_session_path, :method=>'delete' %></li>
